kubernetes/apps/default/tryton/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tryton
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - "tryton.${cluster_domain}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authelia-forwardauth
      backendRefs:
        - name: tryton
          port: 80
